<resources>
    <string name="app_name">deOfertas</string>

    <!-- Article labels -->
    <string name="article_description_label">Description</string>
    <string name="article_store_label">Store</string>
    <string name="article_price_label">Price</string>
    <string name="article_close_button_label">Close</string>

    <!-- API Client -->
    <string name="api_client_error_connection">There is no Internet conection.</string>

    <!-- Search -->
    <string name="search_default_text">Description</string>
    <string name="button_search_text">Search</string>
    <string name="button_advanced_search_text">Advanced Search</string>
    <string name="button_basic_search_text">Basic Search</string>
    <string name="label_price_from_text">Price From</string>
    <string name="label_price_from_to">Price To</string>
    <string name="label_stores">Stores</string>
    <string name="no_data_result">The search has not produced any results.</string>
    <string name="no_internet_connection">There is no Internet connection.</string>
    <string name="search_void_description">You didn\'t enter any description</string>
    <string name="search_price_from_greater_to">The price range is invalid.</string>
    <string name="search_advanced_content_description">Open the advanced field of search.</string>
    <string name="search_hint">Search offers on stores</string>
    <string name="app_label">deOfertas.com</string>

    <!-- Navigation draw -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search offers</string>

    <string name="menu_nav_search">Advanced Search</string>
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_favorites">Favorites</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="menu_nav_results">Search results</string>
    <string name="menu_nav_advanced_search">Advanced search</string>

    <!-- Detail fragment -->
    <string name="favorite_content_description">Add or delete favorite</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Suggestions service -->
    <string name="suggestions_new_offer">New offer available</string>

    <!-- Settings -->
    <string name="settings_url_api_title">deOfertas server URL</string>
    <string name="settings_url_api_summary">URL address for deOfertas server</string>
    <string name="settings_url_api_default">http://192.168.0.159:8080/deofertas</string>
    <string name="settings_frequency_notification_title">Notification frequency</string>
    <string name="settings_frequency_notification_summary">Amount of minutes between notification</string>
</resources>
