<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_nav_search" />
        <item
            android:id="@+id/nav_saved_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_nav_saved_search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_nav_favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_nav_settings" />
    </group>
</menu>
