<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_description_label" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_store_label" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/article_price_label" />

    <ImageView
        android:id="@+id/favorite_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_camera"
        android:visibility="gone"/>

</android.support.v7.widget.LinearLayoutCompat>