<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.gmartin.deofertas.fragments.SearchFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp">

        <android.support.v7.widget.SearchView
            android:id="@+id/search_box"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/search_default_text"
            android:textAlignment="textStart" />

        <ImageButton
            android:id="@+id/button_advanced_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_camera"
            android:text="@string/button_advanced_search_text"
            android:contentDescription="@string/search_advanced_content_description"/>

    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/advanced_search_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_text_margin_bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_price_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_price_from_text"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/search_text_margin_bottom" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_price_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_price_from_to"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/label_stores"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/search_text_margin_bottom"
            android:layout_marginStart="@dimen/search_text_margin_start"
            android:layout_weight="1"
            android:text="@string/label_stores" />

        <io.gmartin.deofertas.widget.MultiSelectionSpinner
            android:id="@+id/store_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown" />

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search_text"
        tools:layout_editor_absoluteY="274dp"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/button_suggested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suggested"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>